--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -26,7 +26,15 @@
 non-essential styles:
 just for appearance; change whatever you want
 */
-
+.carousel {
+  margin: 1em;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  gap: 1em;
+}
+.slides {
+  grid-column: 1 / span 2;
+}
 .slide {
   font-size: 40px;
   padding: 40px;
@@ -53,4 +61,20 @@ just for appearance; change whatever you want
 
 .slide:nth-of-type(5) {
   background: purple;
+}
+.indicators,
+.controls {
+  margin-top: 10px;
+  display: flex;
+  gap: 1em;
+}
+.indicator,
+.control {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background-color: burlywood;
+  cursor: pointer;
 }
