add slider effect for indicators

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,3 +93,7 @@ just for appearance; change whatever you want
   background-color: burlywood;
   cursor: pointer;
 }
+.indicator.active,
+.control.active {
+  background-color: red;
+}
